# B2B_2023

./: CMakeLists.txt  README.md
kolokvium_1/: PROCITAJ.txt  zad0.cpp  zad1.cpp  zad10.cpp  zad11.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad16.cpp  zad17.cpp  zad18.cpp  zad19.cpp  zad2.cpp  zad20.cpp  zad21.cpp  zad22.cpp  zad23.cpp  zad24.cpp  zad25.cpp  zad26.cpp  zad27.cpp  zad28.cpp  zad29.cpp  zad3.cpp  zad30.cpp  zad31.cpp  zad32.cpp  zad33.cpp  zad34.cpp  zad35.cpp  zad36.cpp  zad37.cpp  zad38.cpp  zad39.cpp  zad4.cpp  zad40.cpp  zad41.cpp  zad42.cpp  zad43.cpp  (+13 more)
kolokvium_2/: zad1.cpp  zad10.cpp  zad12.cpp  zad13.cpp  zad14.cpp  zad15.cpp  zad16.cpp  zad17.cpp  zad18.cpp  zad19.cpp  zad2.cpp  zad20.cpp  zad21.cpp  zad22.cpp  zad23.cpp  zad24.cpp  zad25.cpp  zad26.cpp  zad27.cpp  zad28.cpp  zad29.cpp  zad3.cpp  zad30.cpp  zad31.cpp  zad32.cpp  zad33.cpp  zad34.cpp  zad35.cpp  zad36.cpp  zad37.cpp  zad38.cpp  zad39.cpp  zad41.cpp  zad42.cpp  zad43.cpp  zad44.cpp  zad45.cpp  zad46.cpp  zad47.cpp  zad48.cpp  (+21 more)
kolokvium_2/zad11/: zad8.cpp
kolokvium_2/zad4/: zad3.cpp
kolokvium_2/zad40/: zad40.cpp
kolokvium_2/zad65-LABS6-NIZI/: lab6_zad1.cpp  lab6_zad2.cpp  lab6_zad3.cpp
kolokvium_2/zad66-LABS7-MATRICI/: lab7_zad1.cpp  lab7_zad2.cpp  lab7_zad3.cpp
kolokvium_2/zad67-LABS8-FUNKCII I REKURZIJA/: lab8_zad1.cpp  lab8_zad2.cpp  lab8_zad3.cpp
kolokvium_2/zad68-LABS9-FUNKCII REKURZIJA I POKAZUVACI/: lab9_zad1.cpp  lab9_zad2.cpp  lab9_zad3.cpp
kolokvium_2/zad69-LABS10-STRINGOVI I DATOTEKI/: lab10_zad1.cpp  lab10_zad2.cpp  lab10_zad3.cpp
