cmake_minimum_required(VERSION 3.27)
project(B2B_2023)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(B2B_2023
        kolokvium_1/zad0.cpp
        kolokvium_1/zad1.cpp
        kolokvium_1/zad10.cpp
        kolokvium_1/zad11.cpp
        kolokvium_1/zad12.cpp
        kolokvium_1/zad13.cpp
        kolokvium_1/zad14.cpp
        kolokvium_1/zad15.cpp
        kolokvium_1/zad16.cpp
        kolokvium_1/zad17.cpp
        kolokvium_1/zad18.cpp
        kolokvium_1/zad19.cpp
        kolokvium_1/zad2.cpp
        kolokvium_1/zad20.cpp
        kolokvium_1/zad21.cpp
        kolokvium_1/zad22.cpp
        kolokvium_1/zad23.cpp
        kolokvium_1/zad24.cpp
        kolokvium_1/zad25.cpp
        kolokvium_1/zad26.cpp
        kolokvium_1/zad27.cpp
        kolokvium_1/zad28.cpp
        kolokvium_1/zad29.cpp
        kolokvium_1/zad3.cpp
        kolokvium_1/zad30.cpp
        kolokvium_1/zad31.cpp
        kolokvium_1/zad32.cpp
        kolokvium_1/zad33.cpp
        kolokvium_1/zad34.cpp
        kolokvium_1/zad35.cpp
        kolokvium_1/zad36.cpp
        kolokvium_1/zad37.cpp
        kolokvium_1/zad38.cpp
        kolokvium_1/zad39.cpp
        kolokvium_1/zad4.cpp
        kolokvium_1/zad40.cpp
        kolokvium_1/zad41.cpp
        kolokvium_1/zad42.cpp
        kolokvium_1/zad43.cpp
        kolokvium_1/zad44.cpp
        kolokvium_1/zad45.cpp
        kolokvium_1/zad46.cpp
        kolokvium_1/zad47.cpp
        kolokvium_1/zad48.cpp
        kolokvium_1/zad49.cpp
        kolokvium_1/zad5.cpp
        kolokvium_1/zad50.cpp
        kolokvium_1/zad51.cpp
        kolokvium_1/zad6.cpp
        kolokvium_1/zad7.cpp
        kolokvium_1/zad8.cpp
        kolokvium_1/zad9.cpp
        kolokvium_2/zad0.cpp)
